# DevTorch

./: .gitignore  LICENSE.md  environment.yml  requirements.txt  setup.cfg
.github/workflows/: linting.yml  tests.yml
devtorch/: __init__.py  crossval.py  evaluation.py  model.py  query.py  train.py  util.py
docs/: README.md
notebooks/eval/: Custom eval.ipynb  Loading multiple evals.ipynb  Loading.ipynb
notebooks/model/: Custom hyperparams.ipynb  Weight initialization.ipynb
notebooks/train/: Checkpoints.ipynb  L1-L2 weight regularization.ipynb  LR scheduling and grad clipping.ipynb  Tracking losses.ipynb
notebooks/val/: K-fold validation.ipynb
tests/: test_model.py  test_train.py
