[metadata]
name = devtorch
version = 0.0.4
author = Luke Taylor
author_email = webstorms@gmail.com
description = Lightweight PyTorch library to speedup model development.
url = https://github.com/webstorms/DevTorch
project_urls =
    Bug Tracker = https://github.com/webstorms/BrainBox/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch
    torchvision
    scikit-learn
    pandas